# chainlink-data-streams-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md
client/go/: README.md  go.mod  go.sum
client/go/verifier/: AcceptOwnership.go  AcceptOwnership_test.go  Initialize.go  InitializeAccountData.go  InitializeAccountData_test.go  Initialize_test.go  ReallocAccount.go  ReallocAccount_test.go  RemoveLatestConfig.go  RemoveLatestConfig_test.go  SetAccessController.go  SetAccessController_test.go  SetConfig.go  SetConfigActive.go  SetConfigActive_test.go  SetConfigWithActivationTime.go  SetConfigWithActivationTime_test.go  SetConfig_test.go  TransferOwnership.go  TransferOwnership_test.go  Verify.go  Verify_test.go  accounts.go  instructions.go  testing_utils.go  types.go
client/scripts/: anchor-go-gen.sh
crates/arrayvec/: Cargo.toml
crates/arrayvec/src/: lib.rs
crates/chainlink-solana-data-streams/: Cargo.toml  README.md
programs/access-controller/: Cargo.toml
programs/access-controller/src/: lib.rs
programs/verifier/: Cargo.toml  README.md
programs/verifier/src/: errors.rs  events.rs  lib.rs
programs/verifier/src/common/: constants.rs
programs/verifier/src/context/: accept_ownership_context.rs  initialize_account_context.rs  initialize_account_data_context.rs  mod.rs  realloc_account_context.rs  set_access_controller_context.rs  transfer_ownership_context.rs  update_config_context.rs  verify_context.rs
programs/verifier/src/domain/: domain.rs
programs/verifier/src/evm/: encoding.rs  mod.rs  signature.rs
programs/verifier/src/state/: mod.rs  verifier_account.rs
programs/verifier/src/util/: compression.rs  compression_test.rs  log_parser.rs  log_parser_test.rs  mod.rs  slice_util.rs  slice_util_test.rs
programs/verifier/tests/: verifier_initialize_account_test.rs  verifier_remove_latest_config_test.rs  verifier_set_access_controller_test.rs  verifier_set_config_active_test.rs  verifier_set_config_test.rs  verifier_set_config_with_activation_time_test.rs  verifier_transfer_ownership.rs  verifier_verify_test.rs
programs/verifier/tests/common/: test_setup.rs
test_utils/: Cargo.toml
test_utils/src/: assert.rs  base_test_environment.rs  environment_context_operations.rs  environment_operations.rs  lib.rs  report.rs
test_utils/src/client/: access_controller_client.rs  mod.rs  verifier_client.rs
