[workspace]
resolver = "2"
members = [
    # programs
    "programs/verifier",
    "programs/access-controller",

    # dependencies
    "test_utils",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

