[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
sha3 = "0.10.6"
solana-program = "1.18.26"
snap = "1.1.1"
ethabi = "18.0.0"
hex-literal = "0.4.1"
hex = "0.4.3"
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
verifier = { path = "../programs/verifier" }
access-controller = { path = "../programs/access-controller" }
tiny-keccak = "2.0.2"
secp256k1 = { version = "0.30.0", features = ["recovery", "std", "rand"] }
arrayref = "0.3.9"
solana-test-framework = { git = "https://github.com/halbornteam/solana-test-framework", branch = "solana1.18" }

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"

