[package]
name = "verifier"
version = "0.4.0" # This version should align with the features of EVM verifier version
description = "Verifier for Data Streams"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
sha3 = "0.10.6"
solana-program = "2.1.0"
snap = "1.1.1"
ethabi = "18.0.0"
hex-literal = "0.4.1"
hex = "0.4.3"
arrayvec = { version = "1.0.0", path = "../../crates/arrayvec" }
access-controller = { version = "1.0.1", path = "../access-controller", default-features = false, features = ["cpi"] }
bytemuck = "1.19.0"

[dev-dependencies]
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
test_utils = { path = "../../test_utils" }
